deploy/k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: hotel-voice-bot
  labels:
    name: hotel-voice-bot
    environment: production
